Correção cadastro e busca de disciplina após logar com historico